--- a/SE Assignment/SE Assignment.csproj
+++ b/SE Assignment/SE Assignment.csproj
@@ -110,14 +110,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -135,6 +129,10 @@
     <None Include="Resources\AppLogo.png" />
     <None Include="Resources\code.png" />
     <None Include="Resources\code.ico" />
+    <None Include="Resources\Background.jpg" />
+    <None Include="Resources\Icon.png" />
+    <None Include="Resources\Homepage2.png" />
+    <None Include="Resources\homepage2%281%29.png" />
     <Content Include="testlogin.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
