--- a/SE Assignment/SE Assignment.csproj
+++ b/SE Assignment/SE Assignment.csproj
@@ -85,6 +85,11 @@
     <Compile Include="Homepage.Designer.cs">
       <DependentUpon>Homepage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SignUp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +116,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -134,6 +140,8 @@
     <None Include="Resources\Homepage2.png" />
     <None Include="Resources\homepage2%281%29.png" />
     <None Include="Resources\output-onlinepngtools.png" />
+    <None Include="Resources\output-onlinepngtools-removebg-preview.png" />
+    <None Include="Resources\newLogo2.png" />
     <Content Include="testlogin.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
